--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ werkzeug = "^3.0"
 pyopenssl = "^24.0"
 sphinx = ">= 7.2.5, < 7.3.0"
 furo = "^2024.0"
-ruff = "^0.1.0"
+ruff = ">=0.1.0, <=0.2.9"
 sphinx-lint = "^0.9.1"
 
 [tool.black]
@@ -185,7 +185,32 @@ filterwarnings = [
 
 [tool.ruff]
 preview = true
+respect-gitignore = true
 unsafe-fixes = false
+
+# Same as Black.
+line-length = 88
+indent-width = 4
+
+# Assume Python 3.12.x
+target-version = "py312"
+
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".git",
+    # ".mypy_cache",
+    # ".nox",
+    # ".pytest_cache",
+    # ".ruff_cache",
+    # "__pycache__",
+    # "__pypackages__",
+    "htmlcov",
+    "migrations",
+    "images",
+    "media",
+]
+
+[tool.ruff.lint]
 select = [
     "B",    # flake8-bugbear
     "C90",  # mccabe
@@ -210,46 +235,46 @@ ignore = [
 fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
 unfixable = []
 
-# Exclude a variety of commonly ignored directories.
-exclude = [
-    ".git",
-    ".mypy_cache",
-    ".nox",
-    ".pytest_cache",
-    ".ruff_cache",
-    ".venv",
-    "__pycache__",
-    "__pypackages__",
-    "htmlcov",
-    "migrations",
-    "_build",
-    "build",
-    "dist",
-    "images",
-    "media",
-    "node_modules",
-    "venv",
-]
-
-# Same as Black.
-line-length = 88
-
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-# Assume Python 3.12.
-target-version = "py312"
-
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # "accounts/tests/factories.py" = ["BLK100"] (Not supported)
 # "accounts/tests/*" = ["BLK100"] (Not supported)
 "accounts/tests/*" = ["S101", "S106"]
 "config/test.py" = ["S101", "S106"]
 "pages/tests/*" = ["S101", "S106"]
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
+
+[tool.ruff.format]
+# Like Black, use double quotes for strings.
+quote-style = "double"
+
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+
+# Like Black, repspect magic trailing commas.
+skip-magic-trailing-comma = false
+
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
+
+# Enable auto-formatting of code examples in docstrings. Markdown,
+# reStructuredText code/literal blocks and doctests are all supported.
+#
+# This is currently disabled by default, but it is planned for this
+# to be opt-out in the future.
+docstring-code-format = false
+
+# Set the line length limit used when formatting code snippets in
+# docstrings.
+#
+# This only has an effect when the `docstring-code-format` setting is
+# enabled.
+docstring-code-line-length = "dynamic"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
