--- a/.github/workflows/nox-lint_multi-arch.yml
+++ b/.github/workflows/nox-lint_multi-arch.yml
@@ -16,7 +16,8 @@ jobs:
           allow-prereleases: true
           architecture: x64
       - run: pip install nox==2024.10.09
-      - run: pip install poetry==1.8.5
+      - run: pip install poetry==2.0.0
+      - run: pip install poetry-plugin-export==1.8.0
       - run: |
           export SECRET_KEY=${{ secrets.SECRET_KEY }}
           export EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }}
