--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ version = "0.3.2"
 description = "Basic Django project template"
 requires-python = ">=3.10.0, <3.14.0"
 dependencies = [
-    "Django (==5.1.4)",
+    "Django (==5.1.5)",
     "django-allauth (>=65.0, <66.0.0)",
     "environs[django] (>=11.0, <15.0)",
     "django-extensions (>=3.2.0, <3.3.0)",
     "whitenoise (>=6.8.0, <6.9.0)",
-    "psycopg[binary] (==3.2.3)",
+    "psycopg[binary] (==3.2.4)",
     "Pillow (>=11.0, <12.0)",
     "gunicorn (>=23.0.0, <24.0.0)",
     # crispy-bootstrap4 uses calver, so version is unclamped
@@ -51,10 +51,10 @@ package-mode = false
 Homepage = "https://github.com/kevinbowen777/django-start.git"
 Changelog = "https://github.com/kevinbowen777/django-start/NEWS"
 Repository = "https://github.com/kevinbowen777/django-start.git"
-Documentation = "file:///docs/index.rst"
+Documentation = "file:///docs/_build/index.html"
 
 [tool.poetry.group.dev.dependencies]
-django-debug-toolbar = ">=4.0.0, <5.0.0"
+django-debug-toolbar = ">=5.0.0, <6.0.0"
 pre-commit = ">=4.0, <5.0"
 ruff = ">=0.8, <1.0"
 nox = "2024.10.09"
@@ -171,7 +171,7 @@ DJANGO_SETTINGS_MODULE = "config.test"
 addopts = "--reuse-db -p no:warnings"
 python_files = ["test_*.py"]
 filterwarnings = [
-    "ignore::django.utils.deprecation.RemovedInDjango51Warning",
+    # "ignore::django.utils.deprecation.RemovedInDjango51Warning",
 ]
 
 [tool.ruff]
