--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -930,6 +930,9 @@ requests==2.32.3 ; python_version >= "3.11" and python_full_version < "3.14.0" \
 rich==14.0.0 ; python_full_version >= "3.11.0" and python_full_version < "3.14.0" \
     --hash=sha256:1c9491e1951aac09caffd42f448ee3d04e58923ffe14993f6e83068dc395d7e0 \
     --hash=sha256:82f1bc23a6a21ebca4ae0c45af9bdbc492ed20231dcb63f297d6d1021a9d5725
+roman-numerals-py==3.1.0 ; python_version >= "3.11" and python_full_version < "3.14.0" \
+    --hash=sha256:9da2ad2fb670bcf24e81070ceb3be72f6c11c440d73bd579fbeca1e9f330954c \
+    --hash=sha256:be4bf804f083a4ce001b5eb7e3c0862479d10f94c936f6c4e5f250aa5ff5bd2d
 ruff==0.11.6 ; python_version >= "3.11" and python_full_version < "3.14.0" \
     --hash=sha256:01c63ba219514271cee955cd0adc26a4083df1956d57847978383b0e50ffd7d2 \
     --hash=sha256:15adac20ef2ca296dd3d8e2bedc6202ea6de81c091a74661c3666e5c4c223ff6 \
@@ -961,9 +964,9 @@ sortedcontainers==2.4.0 ; python_full_version >= "3.11.0" and python_full_versio
 soupsieve==2.6 ; python_version >= "3.11" and python_full_version < "3.14.0" \
     --hash=sha256:e2e68417777af359ec65daac1057404a3c8a5455bb8abc36f1a9866ab1a51abb \
     --hash=sha256:e72c4ff06e4fb6e4b5a9f0f55fe6e81514581fca1515028625d0f299c602ccc9
-sphinx==8.1.3 ; python_version >= "3.11" and python_full_version < "3.14.0" \
-    --hash=sha256:09719015511837b76bf6e03e42eb7595ac8c2e41eeb9c29c5b755c6b677992a2 \
-    --hash=sha256:43c1911eecb0d3e161ad78611bc905d1ad0e523e4ddc202a58a821773dc4c927
+sphinx==8.2.3 ; python_version >= "3.11" and python_full_version < "3.14.0" \
+    --hash=sha256:398ad29dee7f63a75888314e9424d40f52ce5a6a87ae88e7071e80af296ec348 \
+    --hash=sha256:4405915165f13521d875a8c29c8970800a0141c14cc5416a38feca4ea5d9b9c3
 sphinx-basic-ng==1.0.0b2 ; python_version >= "3.11" and python_full_version < "3.14.0" \
     --hash=sha256:9ec55a47c90c8c002b5960c57492ec3021f5193cb26cebc2dc4ea226848651c9 \
     --hash=sha256:eb09aedbabfb650607e9b4b68c9d240b90b1e1be221d6ad71d61c52e29f7932b
