--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "environs[django] (>=11.0, <15.0)",
     "django-extensions (>=4.1, <4.2.0)",
     "whitenoise (>=6.9.0, <7.0.0)",
-    "psycopg[binary] (==3.2.10)",
+    "psycopg[binary] (==3.2.12)",
     "Pillow (>=12.0, <13.0)",
     "gunicorn (>=23.0.0, <24.0.0)",
     # crispy-bootstrap4 uses calver, so version is unclamped
@@ -49,7 +49,7 @@ classifiers = [
 Homepage = "https://github.com/kevinbowen777/django-start.git"
 Changelog = "https://github.com/kevinbowen777/django-start/NEWS"
 Repository = "https://github.com/kevinbowen777/django-start.git"
-Documentation = "file:///docs/_build/index.html"
+Documentation = "file:///docs/build/index.html"
 
 [tool.poetry]
 package-mode = false
@@ -70,13 +70,14 @@ coverage = { version = ">=7.0.0, <8.0.0", extras = ["toml"] }
 django-coverage-plugin = ">=3.2.0, <3.3.0"
 sphinx = ">= 8.0, <9.0"
 djlint = ">=1.31.0, <1.40.0"
-sphinx-lint = "1.0"
+sphinx-lint = "1.0.1"
 factory-boy = "3.3.3"
 werkzeug = ">=3.1, <4.0"
 pyopenssl = ">=24.0, <26.0"
-furo = ">=2024.0, <2025.0"
+furo = "2025.9.25"
 django-types = ">=0.22.0, <0.23.0"
 pip-audit = "^2.9.0"
+sphinx-design = "^0.6.1"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.8"
@@ -134,7 +135,7 @@ exclude = [
     "**/__pycache__",
     "**/migrations",
 ]
-ignore = ["docs/_build"]
+ignore = ["docs/build"]
 defineConstant = { DEBUG = true }
 stubPath = ""
 # The following may need to be modified when collaborating with others
@@ -240,7 +241,7 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 "accounts/tests/*" = ["S101", "S106"]
 "config/test.py" = ["S101", "S106"]
 "pages/tests/*" = ["S101", "S106"]
-"docs/conf.py" = ["A001"]
+"docs/source/conf.py" = ["A001"]
 
 [tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
